--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -6,8 +6,12 @@
     <group android:checkableBehavior="single">
         <item
             android:id="@+id/nav_home"
-            android:icon="@drawable/ic_baseline_search_24"
+            android:icon="@drawable/ic_baseline_home_24"
             android:title="@string/menu_home" />
+        <item
+            android:id="@+id/busquedaActivity"
+            android:icon="@drawable/ic_baseline_search_24"
+            android:title="@string/menu_busqueda" />
         <item
             android:id="@+id/nav_gallery"
             android:icon="@drawable/ic_baseline_account_circle_24"
