--- a/app/src/main/res/layout/activity_busqueda.xml
+++ b/app/src/main/res/layout/activity_busqueda.xml
@@ -5,11 +5,16 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context=".ui.home.HomeFragment">
+    tools:context=".BusquedaActivity">
+
+
+    <include layout="@layout/action_bar_toolbar" />
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -31,34 +36,29 @@
                 app:startIconDrawable="@drawable/ic_baseline_search_24">
 
                 <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/idcliente"
+                    android:id="@+id/idBusqueda"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:inputType="text"
-                    android:textSize="15sp"
                     android:imeOptions="actionSearch"
-                    />
+                    android:inputType="text"
+                    android:textSize="15sp" />
 
             </com.google.android.material.textfield.TextInputLayout>
-
-
-
-
 
 
             <com.google.android.material.button.MaterialButton
                 android:id="@+id/btnFilters"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="Filtros"
                 android:layout_gravity="right"
-                android:textColor="@color/black"
-                android:backgroundTint="#00F44336"
                 android:layout_margin="10dp"
+                android:layout_weight="1"
+                android:backgroundTint="@color/white"
+                android:elevation="5dp"
+                android:text="Filtros"
+                android:textColor="@color/black"
                 app:cornerRadius="15dp"
-                tools:ignore="UnusedAttribute"
-                />
+                tools:ignore="UnusedAttribute" />
 
             <LinearLayout
                 android:id="@+id/Filter"
@@ -70,43 +70,43 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="horizontal"
-                    >
+                    android:orientation="horizontal">
+
                     <com.google.android.material.button.MaterialButton
                         android:id="@+id/btnFMarca"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:text="Marca"
-                        android:backgroundTint="#F44336"
                         android:layout_margin="10dp"
+                        android:layout_weight="1"
+                        android:backgroundTint="#F44336"
+                        android:text="Marca"
                         app:elevation="10dp"
-                        tools:ignore="UnusedAttribute"
-                        />
+                        tools:ignore="UnusedAttribute" />
+
                     <com.google.android.material.button.MaterialButton
                         android:id="@+id/btnFModelo"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:text="Modelo"
-                        android:backgroundTint="@color/PrimaryColor"
                         android:layout_margin="10dp"
+                        android:layout_weight="1"
+                        android:backgroundTint="@color/PrimaryColor"
+                        android:text="Modelo"
                         app:elevation="10dp"
-                        tools:ignore="UnusedAttribute"
-                        />
+                        tools:ignore="UnusedAttribute" />
+
                     <com.google.android.material.button.MaterialButton
                         android:id="@+id/btfLinea"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:text="Linea"
-                        android:backgroundTint="@color/PrimaryColor"
                         android:layout_margin="10dp"
+                        android:layout_weight="1"
+                        android:backgroundTint="@color/PrimaryColor"
+                        android:text="Linea"
                         app:elevation="10dp"
-                        tools:ignore="UnusedAttribute"
-                        />
+                        tools:ignore="UnusedAttribute" />
 
                 </LinearLayout>
+
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -116,39 +116,38 @@
                         android:id="@+id/checkyear"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:layout_marginStart="5dp"
                         android:layout_weight="1.4"
                         android:maxLines="1"
-                        android:layout_marginStart="5dp"
                         android:text="Año" />
 
                     <com.google.android.material.textfield.TextInputLayout
                         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_weight="1"
                         android:layout_marginStart="5dp"
                         android:layout_marginTop="5dp"
                         android:layout_marginEnd="10dp"
+                        android:layout_weight="1"
                         android:hint="AÑO INICIO"
                         android:maxLines="1"
                         app:boxBackgroundMode="outline"
                         app:boxCornerRadiusTopEnd="10dp"
                         app:boxCornerRadiusTopStart="10dp"
                         app:startIconDrawable="@drawable/icons_fecha_hasta"
-                        app:startIconTint="@null"
-                        >
+                        app:startIconTint="@null">
 
                         <com.google.android.material.textfield.TextInputEditText
                             android:id="@+id/yearInicio"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
+                            android:autoSizeMaxTextSize="15sp"
+                            android:autoSizeMinTextSize="5sp"
+                            android:imeOptions="actionDone"
                             android:inputType="number"
                             android:maxLength="4"
-                            android:textSize="10sp"
-                            android:autoSizeMinTextSize="5sp"
-                            android:autoSizeMaxTextSize="15sp"
                             android:textAlignment="textEnd"
-                            android:imeOptions="actionDone"
+                            android:textSize="10sp"
                             app:counterMaxLength="4" />
 
                     </com.google.android.material.textfield.TextInputLayout>
@@ -157,31 +156,30 @@
                         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_weight="1"
                         android:layout_marginStart="5dp"
                         android:layout_marginTop="5dp"
                         android:layout_marginEnd="10dp"
+                        android:layout_weight="1"
                         android:hint="AÑO FINAL"
                         android:maxLines="1"
                         app:boxBackgroundMode="outline"
                         app:boxCornerRadiusTopEnd="10dp"
                         app:boxCornerRadiusTopStart="10dp"
                         app:startIconDrawable="@drawable/icons_fecha_hasta"
-                        app:startIconTint="@null"
-                        >
+                        app:startIconTint="@null">
 
                         <com.google.android.material.textfield.TextInputEditText
                             android:id="@+id/yearfinal"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
+                            android:autoSizeMaxTextSize="15sp"
+                            android:autoSizeMinTextSize="10sp"
+
+                            android:imeOptions="actionDone"
                             android:inputType="number"
                             android:maxLength="4"
-
-                            android:textSize="10sp"
-                            android:autoSizeMinTextSize="10sp"
-                            android:autoSizeMaxTextSize="15sp"
                             android:textAlignment="textEnd"
-                            android:imeOptions="actionDone"
+                            android:textSize="10sp"
                             app:counterMaxLength="4" />
 
                     </com.google.android.material.textfield.TextInputLayout>
@@ -192,16 +190,13 @@
                     android:id="@+id/btnBuscar"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="Buscar"
-                    android:backgroundTint="#000000"
                     android:layout_margin="10dp"
+                    android:backgroundTint="#000000"
+                    android:text="Buscar"
                     app:elevation="10dp"
-                    tools:ignore="UnusedAttribute"
-                    />
+                    tools:ignore="UnusedAttribute" />
 
             </LinearLayout>
-
-
 
 
             <androidx.recyclerview.widget.RecyclerView
@@ -216,7 +211,6 @@
         </LinearLayout>
 
     </ScrollView>
-
 
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
