--- a/app/src/main/res/layout/activity_estadode_cuenta.xml
+++ b/app/src/main/res/layout/activity_estadode_cuenta.xml
@@ -18,10 +18,12 @@
         android:clickable="true"
 
         />
+    <include layout="@layout/action_bar_toolbar" />
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">
 
         <LinearLayout
             android:layout_width="match_parent"
