--- a/app/src/main/res/layout/activity_busqueda.xml
+++ b/app/src/main/res/layout/activity_busqueda.xml
@@ -65,7 +65,49 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
 
+                    <TextView
+                        android:id="@+id/marcatxt"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="marca"
+                        android:padding="3dp"
+                        android:layout_margin="5dp"
+                        android:background="@drawable/radiusmacke"
+                        android:visibility="gone"
+
+                        android:onClick="borrarmarca"
+
+                        ></TextView>
+                    <TextView
+                        android:id="@+id/modelotxt"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="modelo"
+                        android:padding="3dp"
+                        android:layout_margin="5dp"
+                        android:background="@drawable/radiusmacke"
+                        android:visibility="gone"
+
+                        android:onClick="borrarmodelo"
+                        ></TextView>
+                    <TextView
+                        android:id="@+id/lineatxt"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="linea"
+                        android:padding="3dp"
+                        android:background="@drawable/radiusmacke"
+                        android:layout_margin="5dp"
+                        android:visibility="gone"
+                        android:onClick="borrarmlinea"
+                        ></TextView>
+
+                </LinearLayout>
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -106,6 +148,14 @@
                         tools:ignore="UnusedAttribute" />
 
                 </LinearLayout>
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textAlignment="textEnd"
+                    android:layout_marginEnd="30dp"
+                    android:text="(Opcional)"
+                    ></TextView>
 
                 <LinearLayout
                     android:layout_width="match_parent"
