--- a/app/src/main/res/layout/item_list_consulpedi.xml
+++ b/app/src/main/res/layout/item_list_consulpedi.xml
@@ -99,12 +99,21 @@
                         android:id="@+id/Fecha"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:textStyle="bold"
                         android:layout_margin="5dp"
-                        android:textSize="15sp" />
+                        android:textSize="15sp"
+                        android:textStyle="bold" />
 
                     <TextView
                         android:id="@+id/piezas"
+                        android:textStyle="bold"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textSize="15sp"
+                        android:layout_margin="5dp"
+
+                        />
+                    <TextView
+                        android:id="@+id/comentario"
                         android:textStyle="bold"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
