--- a/app/src/main/res/menu/inicio.xml
+++ b/app/src/main/res/menu/inicio.xml
@@ -13,6 +13,35 @@
         android:icon="@drawable/ic_baseline_shopping_cart_24"
         app:showAsAction="ifRoom" />
 
+    <item  android:title="Menu"
+        android:icon="@drawable/ic_baseline_menu_24"
+        android:id="@+id/MenuSPR"
+        app:showAsAction="always">
+        <menu>
+
+            <item
+                android:title="Rodatech"
+                android:id="@+id/RodatechMenu"
+                app:showAsAction="never"
+
+                />
+            <item
+                android:title="Partech"
+                android:id="@+id/PartechMenu"
+                app:showAsAction="never"
+
+                />
+            <item
+                android:title="Shark"
+                android:id="@+id/SharkMenu"
+                app:showAsAction="never"
+
+                />
+
+
+        </menu>
+    </item>
+
 
 
 </menu>
